# fem-labs

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_vs2010.bat  build_vs2015.bat  configure.sh  configure_vs2010.bat  configure_vs2015.bat  run.sh  run_vs2010.bat  run_vs2015.bat  super_clean.sh  super_clean_vs2010.bat  super_clean_vs2015.bat
dat/a/: A.1.ele  A.1.node  A.1.poly
dat/airfoil/: airfoil.1.ele  airfoil.1.node  airfoil.1.poly  airfoil.poly
dat/cow/: cow.1.face  cow.1.node
dat/hose/: hose.1.edge  hose.1.ele  hose.1.face  hose.1.node  hose.smesh
dep/eigen/: CMakeLists.txt
dep/glad/: 0001-Ignoring-SSL-certificates.patch  CMakeLists.txt
dep/glfw/: CMakeLists.txt
dep/linmath/: CMakeLists.txt
src/adhoc/: adhoc_events.h  airfoil.h  ball.h  camera2D.h  camera3D.h  drag.h  grid.h  heat.h  hose.h  pan2D.h  tmp.h  zoom2D.h
src/control/: pan.h  zoom.h
src/events/: events.h  type_index.h  type_info.h
src/fem/: fem.h  fem2D.h  mesh.h
src/graphics/: draw.h  shader.cpp  shader.h  window.cpp  window.h  window_events.h
src/gui/: element.h  gui.cpp  gui.h  gui_events.h
